--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         _paq.push(['trackPageView']);
         _paq.push(['enableLinkTracking']);
         (function () {
-            var u = "//matomo.matthieudupas.com/";
+            var u = "//matomo.matthieudupas.fr/";
             _paq.push(['setTrackerUrl', u + 'matomo.php']);
             _paq.push(['setSiteId', '1']);
             var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
